[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Can be removed once the GIT dependencies are gone.
allow-direct-references = true

[tool.hatch.version]
path = "src/video_processing_utils/__init__.py"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name="video_processing_utils"
dynamic=["version"]
authors = [
  { name="David Mc Ken", email="david.mcken@codepro.guru" },
]
description="Video processing utilities"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "python-dotenv",
    #"python-ffmpeg",
    "python-ffmpeg @ git+https://github.com/dmcken/python-ffmpeg@add-started-event",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/dmcken/video_processing_utils"
Issues = "https://github.com/dmcken/video_processing_utils/issues"

[project.scripts]
vuconcat    = "video_processing_utils.concat_cli:main"
vucontainer = "video_processing_utils.convert_container:process_dir"
vuconvert   = "video_processing_utils.convert_video:main"
vumerge     = "video_processing_utils.concat_video.cli:main"


